--- a/public/index.html
+++ b/public/index.html
@@ -110,7 +110,7 @@
         const messagesContainer = document.getElementById('messages-container');
         const loadingIndicator = document.getElementById('loading-indicator');
 
-        const API_ENDPOINT = 'http://0.0.0.0:8080/query';
+        const API_ENDPOINT = '/query';
 
         let conversationHistory = [];
 
